--- a/src/components/routes/search/Search.scss
+++ b/src/components/routes/search/Search.scss
@@ -54,6 +54,7 @@ SEARCH BAR
 }
 
 .search-bar-input {
+  height: 40px;
   padding: 0.5rem 1rem;
   display: flex;
   align-items: center;
@@ -62,6 +63,8 @@ SEARCH BAR
 }
 
 .search-bar-button {
+  width: 40px;
+  height: 40px;
   padding: 0.5rem;
   display: flex;
   justify-content: center;
@@ -83,9 +86,7 @@ FORM RESULTS CARD
 */
 
 .form-results-card {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  display: none;
 }
 
 /*
@@ -203,6 +204,7 @@ SEARCH CAROUSEL
 .search-slider {
   width: 100%;
   height: 30vh;
+  margin-top: -0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -248,6 +250,11 @@ SEARCH CAROUSEL
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.search-slide-weather-text {
+  width: 50%;
+  text-align: end;
 }
 
 .search-slide-date p:nth-child(1) {
