--- a/src/index.scss
+++ b/src/index.scss
@@ -88,9 +88,9 @@ $secondary: #020214;
 $ternary: #063879;
 $quarternary: #2E85D9;
 $quinary: #29C6F4;
-$white-bg: #FFFFFF;
-$transparent-white-bg: #FFFFFF60;
-$white-text: #FFFFFF;
+$white-bg: #EFEFEF;
+$transparent-white-bg: #EFEFEF60;
+$white-text: #EFEFEF;
 
 
 /*
